# hangyul-api

./: .env.example  .gitignore  README.md  pyproject.toml
apps/api/: main.py
docs/: functional_specification.ko.md  functional_specification.md
frontend/: app.py
src/common/api/: membership.py  pagination.py  progress.py
src/common/config/: settings.py
src/common/exceptions/: __init__.py  base.py  handlers.py
src/common/security/: auth.py  tokens.py
src/modules/ai/domain/: ports.py
src/modules/ai_chat/presentation/: router.py  schemas.py
src/modules/announcements/presentation/: router.py  schemas.py
src/modules/auth/presentation/: router.py  schemas.py
src/modules/dashboard/presentation/: router.py  schemas.py
src/modules/gamification/presentation/: router.py  schemas.py
src/modules/learning/presentation/: router.py  schemas.py
src/modules/legal/presentation/: router.py  schemas.py
src/modules/notifications/presentation/: router.py  schemas.py
src/modules/onboarding/presentation/: router.py  schemas.py
src/modules/quizzes/presentation/: router.py  schemas.py
src/modules/recommendations/application/: services.py
src/modules/recommendations/domain/: entities.py  value_objects.py
src/modules/recommendations/infrastructure/: container.py
src/modules/recommendations/presentation/: router.py  schemas.py
src/modules/sentences/presentation/: router.py  schemas.py
src/modules/settings/presentation/: router.py  schemas.py
src/modules/social/presentation/: router.py  schemas.py
tests/unit/: test_progress_service.py
(+14 files in other folders)
